<resources>
    <string name="app_name">Pharmacy</string>
    <string name="loginAr">تسجيل الدخول</string>
    <string name="usernameAr">اسم المستخدم</string>
    <string name="passwordAr">كلمة المرور</string>
    <string name="forgetPassAr">هل نسيت كلمة المرور</string>
    <string name="createAccountAr">ليس لديك حساب ؟انشيء حساب</string>
    <string name="emailAr">البريد الإلكتروني</string>
    <string name="signupAr">التسجيل</string>
    <string name="confirmpasswordAr">تأكيد كلمة المرور</string>
    <string name="mobileAr">الموبايل</string>
    <string name="addressAr">العنوان</string>
    <string name="notValidEmailAr">من فضلك قم بإدخال بريد إلكتروني صحيح</string>
    <string name="createaccountAr">إنشاء حساب جديد</string>
    <string name="forgetpasswordAr">هل نسيت كلمة المرور؟</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="LogoutArMessage">هل تريد تسجيل الخروج؟</string>
    <string name="LogoutEnMessage">Are you sure you want to logout?</string>
    <string name="CheckConnectionEn">Please check your internet connection</string>
    <string name="CheckConnectionAr">من فضلك تأكد من الإتصال بالانترنت</string>
    <string name="contactAr">اتصل بنا</string>
    <string name="contactTitlAr">خدمة العملاء</string>
    <string name="contactdesAr">اتصل بنا عن طريق الهاتف أو البريد الإلكترني إذا كان لديك أسئلة </string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">Rochta Record</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_prompt_ar">إضغط علي الميكرفون لتسجيل الروشتة</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Registration Successfully</string>
    <string name="info_registered_success">Registered successfully</string>
    <!-- info messages -->
    <string name="info_registered">Registered. ObjectId: %s</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>
    <string name="loading_login">Logging in…</string>
</resources>
