<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_weight="1.5"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/pharmacy_launch"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
       >




            <TextView
                android:id="@+id/loginTab"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loginAr"
                android:textAllCaps="true"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="15dp"
                android:textColor="@color/black"
               />







                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableRight="@drawable/user"
                    android:hint="@string/usernameAr"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:drawablePadding="7dp"
                    android:singleLine="true"
                    android:gravity="center_vertical|right"


                    android:background="@drawable/login_underline"
                    android:layout_alignParentTop="true"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableRight="@drawable/password"
                    android:hint="@string/passwordAr"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:drawablePadding="7dp"
                    android:singleLine="true"
                    android:gravity="center_vertical|right"
                    android:layout_below="@+id/userName"

                    android:background="@drawable/login_underline"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="5dp"
                    android:id="@+id/social_login">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook"
                        android:layout_margin="10dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/google"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:layout_below="@+id/social_login"
                    android:layout_alignParentBottom="true"
                    >

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loginAr"
                        android:background="@drawable/background_border"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:padding="5dp"/>
                    <Button
                        android:id="@+id/forgetPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forgetPassAr"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@null"

                        android:textColor="@color/black"
                        />

                    <Button
                        android:id="@+id/createAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/createAccountAr"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@null"
                        android:layout_gravity="bottom"
                        android:textColor="@color/black"
                        />

                </LinearLayout>


    </LinearLayout>

</LinearLayout>
